a number of fixes, esp. around parsing type bounds, and multiple type bounds, and a change to addToContext, where we use priority values rather than a boolean